# vk-simple-cpp

./: CMakeLists.txt  README.md  codegen_text.py  generate.py
include/vk-simple/: vk-simple.h
include/vulkan/: vulkan.cpp  vulkan.h  vulkan_string.cpp  vulkan_string.h
sample/: CMakeLists.txt  triangle.cpp
test/: CMakeLists.txt  main.cpp
